...
      <Tab.Screen
        name="Favourites"
        component={FavouritesScreen}
        options={{
          tabBarLabel: 'Favourites',
          tabBarIcon: FavouritesTabIcon,
          tabBarButton: renderTabButton('tab-favourites'),
        }}
      />
    </Tab.Navigator>
  );
};
