...
				<View style={styles.searchLoader}>
					<ActivityIndicator size="small" />
				</View>
			)}
			{!isSearchActive && (<Text style={styles.sectionTitle}>Popular</Text>)}
			<FlatList
				testID="recipe-list"
				key={isSearchActive ? 'search-list' : 'default-list'}
				data={displayedRecipes}
				keyExtractor={(item) => item.id.toString()}
				showsHorizontalScrollIndicator={false}
				numColumns={isSearchActive ? 1 : 2}
				showsVerticalScrollIndicator={false}
...
